--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
 	</head>
     
 
-<!-- 
-
-calamity.pw original site x 
-
--->
-
 	
     <video id="myVideo" autoplay="1" loop="1"><source src="video/video.mp4" type="video/mp4"></video>
  			<script>
@@ -50,9 +44,10 @@ calamity.pw original site x
 
 							<div class="progress"></div>
 							</ul>						
-
-							<li><a href="http://steamcommunity.com/groups/affected" target="_blank" class="fa  fa-steam"></a></li>
-
+							<li><a href="http://steamcommunity.com/profiles/76561198263666801" target="_blank" class="fa  fa-steam"></a></li>
+							<li><a href="http://steamcommunity.com/profiles/76561197960471486" target="_blank" class="fa  fa-steam"></a></li>
+							<li><a href="http://steamcommunity.com/groups/affected" target="_blank" class="fa  fa-steam-square"></a></li>
+							
 							</ul>	
 							<div class="progress"></div>			
 							<ul>					
